# Searcher

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: authentication.rs  logging.rs  main.rs  search.rs
src/search/: github.rs
