[package]
name = "searcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
arc-swap = "1.7.1"
axum = "0.8.1"
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive", "string"] }
dirs = "6.0.0"
env_logger = "0.11.6"
futures = "0.3.31"
git2 = "0.20.0"
git-cloner = { path = "../GitCloner" }
grep = "0.3.2"
indicatif = "0.17.11"
lazy_static = "1.5.0"
log = "0.4.26"
oauth2 = "5.0.0"
octocrab = "0.43.0"
once_cell = "1.20.3"
open = "5.3.2"
reqwest = "0.12.12"
secrecy = "0.10.3"
serde = "1.0.218"
serde_json = "1.0.139"
serde_urlencoded = "0.7.1"
termcolor = "1.4.1"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
walkdir = "2.5.0"