[package]
name = "searcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
arc-swap = "1.7.1"
axum = "0.8.4"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive", "string"] }
dirs = "6.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
git2 = "0.20.2"
git_cloner = { git = "https://github.com/RobinCombrink/GitCloner" }
grep = "0.3.2"
indicatif = "0.17.11"
lazy_static = "1.5.0"
log = "0.4.27"
oauth2 = "5.0.0"
octocrab = "0.44.1"
once_cell = "1.21.3"
open = "5.3.2"
reqwest = "0.12.20"
secrecy = "0.10.3"
serde = "1.0.219"
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
termcolor = "1.4.1"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
walkdir = "2.5.0"