[package]
name = "searcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive", "string"] }
env_logger = "0.11.8"
futures = "0.3.31"
git_cloner = { git = "https://github.com/RobinCombrink/GitCloner" }
grep = "0.3.2"
log = "0.4.27"
octocrab = "0.44.1"
termcolor = "1.4.1"
tokio = { version = "1.45.1", features = ["full"] }
walkdir = "2.5.0"